<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".CredentialsActivity">

    <TextView
        android:id="@+id/labelInsertName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_phase_1"
        android:textSize="25sp" />


    <EditText
        android:id="@+id/insertName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/insert_name"
        android:importantForAutofill="no" />


    <Button
        android:id="@+id/submitName"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/submit"
        android:textColor="@color/cardview_light_background"
        tools:ignore="PrivateResource" />

</LinearLayout>