<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sfondo"
    tools:context=".FaceActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/bottoneFoto"
            android:layout_width="150dp"
            android:layout_height="35dp"
            android:layout_below="@id/mimageView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:background="@color/white"
            android:text="@string/take_a_photo" />

        <ImageView
            android:id="@+id/mimageView"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_below="@id/textPicture"
            android:layout_alignParentBottom="false"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/registration_photo"
            app:srcCompat="@drawable/face_1" />

        <TextView
            android:id="@+id/textPicture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:textColor="@color/white"
            android:text="@string/take_a_picture_to_sign_up"
            android:textSize="24sp"
            />

    </RelativeLayout>
</ScrollView>