<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sfondo"
    tools:context=".SpeakerActivity">


    <Button
        android:id="@+id/btnStartRecord"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/subTextRecord"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="47dp"
        android:background="@drawable/rounded_button"
        android:text="@string/start_record" />

    <TextView
        android:id="@+id/textRecord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:text="@string/record_the_sentence_to_sign_up"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/subTextRecord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textRecord"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/phrase_identification"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/subTextRecord"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>